5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1596_1017.log
== TEST (2019-03-25 23:36:29) 
-- CODE:
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=6371.01
d=r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)cos(g1-g2)))
print(round(d,2))
-- ERROR:
File "XXXX", line 6
    d=r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)cos(g1-g2)))
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:37:01) 
-- CODE:
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=6371.01
d=r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t1=radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:37:32) 
-- CODE:
from math import * 
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=6371.01
d=r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:37:47) 
-- CODE:
from math import * 
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=6371.01
d=r*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))
-- EXECUTION TIME:
0.17355
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
